@startuml
!include ..\ChargeCommon.puml
package Charge{
    package AfterSchoolCharge{
        class AfterSchoolRemittance{
            name: string
            created_at: datetime
            payment_date: datetime
            concept: string
        }
        class AfterSchoolReceipt {
            amount: float
        }
    }

    AfterSchoolReceipt --> Receipt
    AfterSchoolRemittance --> Remittance

    AfterSchoolReceipt *-- State
    AfterSchoolRemittance *-- "1..N" AfterSchoolReceipt
}

package AfterSchool{
    class AfterSchoolEdition
    class AfterSchoolRegistration
}
AfterSchoolRemittance o-- "1..N" AfterSchoolEdition
AfterSchoolReceipt o-- AfterSchoolRegistration
AfterSchoolEdition --o AfterSchoolRegistration
@enduml
